# 25_ws

./: data.yaml  frames_2025-12-07_16.24.17.gv  inspect_hsv.py  label_studio.sh  map1209.pgm  map1209.yaml  map_1207.pgm  map_1207.yaml  test1125.pgm  test1125.yaml  test_yolo_pole.py  yolopred.py
dataset/: data.yaml  labels.cache  yolotrain.py
dataset/labels/: 0153a12b-20251213_151845_007686.txt  02bec2a5-20251213_151354_497021.txt  03b1369b-20251213_131058_945182.txt  07696047-20251213_152127_257350.txt  07f3d314-20251213_151509_684749.txt  0e97f3bf-20251213_131512_262733.txt  0fe2c6d8-20251213_131243_157435.txt  10f341e1-20251213_152421_182194.txt  1277d53f-20251213_151749_033275.txt  15bf3806-20251213_131517_942527.txt  15dc18d8-20251213_150949_253959.txt  1c48e212-20251213_131010_379338.txt  1c5b5b74-20251213_130941_991428.txt  1f34f874-20251213_151630_409813.txt  2007d739-20251213_152543_107961.txt  288cb39f-20251213_150745_898949.txt  292b9c21-20251213_152518_757216.txt  2f3a088a-20251213_151125_389943.txt  322c9689-20251213_151410_075552.txt  332564a9-20251213_152137_030520.txt  35124ca0-20251213_151927_805415.txt  36d27195-20251213_152427_753244.txt  38e9346e-20251213_131127_735219.txt  (+116 more)
demo_interfaces_test/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tb4_autonav/share/tb4_autonav/: package.dsv  package.sh  package.xml
install/tb4_autonav/share/tb4_autonav/config/: slam_with_init.yaml
install/tb4_autonav/share/tb4_autonav/launch/: mapping_bringup.launch.py  task_bringup.launch.py
log/: latest_build
(+329 files in other folders)
